413-dmz-example-3/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "newStorageAccountName": {
      "type": "string",
      "minLength": 3,
      "maxLength": 24,
      "metadata": {
        "description": "Unique DNS Name for the Storage Account where the Virtual Machine's disks will be placed."
      }
    },
    "adminUsername": {
      "type": "string",
      "minLength": 1,
      "metadata": {
        "description": "Username for the Virtual Machines."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Password for the Virtual Machines."
      }
    }
  },
  "variables": {
    "NSGName": "myVNetNSG",

    "FERouteTableName": "FrontEndSubnetRouteTable",
    "BERouteTableName": "BackEndSubnetRouteTable",

    "RouteTableName": "",
    "FWName": "myFirewall",
    "VM01Name": "IIS01",
    "VM02Name": "AppVM01",
    "VM03Name": "AppVM02",
    "VM04Name": "DNS01",

    "VNetName": "VNet01",
    "Subnet0Name": "SecNet",
    "Subnet0Prefix": "10.0.0.0/24",
    "Subnet1Name": "FrontEnd",
    "Subnet1Prefix": "10.0.1.0/24",
    "Subnet2Name": "BackEnd",
    "Subnet2Prefix": "10.0.2.0/24",

    "FWSubnetRef": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('VNetName')), '/subnets/', variables('Subnet0Name'))]",
    "NIC01SubnetRef": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('VNetName')), '/subnets/', variables('Subnet1Name'))]",
    "NIC02SubnetRef": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('VNetName')), '/subnets/', variables('Subnet2Name'))]",
    "NIC03SubnetRef": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('VNetName')), '/subnets/', variables('Subnet2Name'))]",
    "NIC04SubnetRef": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('VNetName')), '/subnets/', variables('Subnet2Name'))]",

    "storageAccountType": "Standard_LRS",
    "imageOffer": "WindowsServer",
    "imagePublisher": "MicrosoftWindowsServer",
    "windowsOSVersion": "2012-R2-Datacenter",
    "vmSize": "Standard_D3",
    "vmStorageAccountContainerName": "vhds"
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[parameters('newStorageAccountName')]",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "StorageAccount"
      },
      "properties": {
        "accountType": "[variables('storageAccountType')]"
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('VNetName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "VNet01"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/routeTables/', variables('FERouteTableName'))]",
        "[concat('Microsoft.Network/routeTables/', variables('BERouteTableName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('NSGName'))]",
        "[concat('Microsoft.Network/publicIPAddresses/', variables('FWName'), '_NIC_PIP')]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('Subnet1Prefix')]",
            "[variables('Subnet2Prefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('Subnet0Name')]",
            "properties": {
              "addressPrefix": "[variables('Subnet0Prefix')]"
            }
          },
          {
            "name": "[variables('Subnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('Subnet1Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSGName'))]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('FERouteTableName'))]"
              }
            }
          },
          {
            "name": "[variables('Subnet2Name')]",
            "properties": {
              "addressPrefix": "[variables('Subnet2Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('NSGName'))]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('BERouteTableName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(variables('FWName'), '_NIC_PIP' )]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "FW NIC PIP"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('VM01Name'), '_NIC')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "IIS01 NIC"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('VNetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.0.1.5",
              "subnet": {
                "id": "[variables('NIC01SubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('VM02Name'), '_NIC')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "AppVM01 NIC"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('VNetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.0.2.5",
              "subnet": {
                "id": "[variables('NIC02SubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('VM03Name'), '_NIC')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "AppVM02 NIC"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('VNetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.0.2.6",
              "subnet": {
                "id": "[variables('NIC03SubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('VM04Name'), '_NIC')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "DNS01 NIC"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('VNetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.0.2.4",
              "subnet": {
                "id": "[variables('NIC04SubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[concat(variables('FWName'), '_NIC')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "myFirewall NIC"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('VNetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.0.0.4",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('FWName'), '_NIC_PIP' ))]"
              },
              "subnet": {
                "id": "[variables('FWSubnetRef')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('VM01Name')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "IIS01"
      },
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', parameters('newStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('VM01Name'), '_NIC')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('VM01Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[variables('windowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "osdisk",
            "vhd": {
              "uri": "[concat('http://',parameters('newStorageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/', variables('VM01Name'),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('VM01Name'), '_NIC'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('VM02Name')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "AppVM01"
      },
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', parameters('newStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/',  variables('VM02Name'), '_NIC')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('VM02Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[variables('windowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "osdisk",
            "vhd": {
              "uri": "[concat('http://',parameters('newStorageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',variables('VM02Name'),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('VM02Name'), '_NIC'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('VM03Name')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "AppVM02"
      },
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', parameters('newStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/',  variables('VM03Name'), '_NIC')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('VM03Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[variables('windowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "osdisk",
            "vhd": {
              "uri": "[concat('http://',parameters('newStorageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',variables('VM03Name'),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', Concat(variables('VM03Name'), '_NIC'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('VM04Name')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "DNS01"
      },
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', parameters('newStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/',  variables('VM04Name'), '_NIC')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('VM04Name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[variables('windowsOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "name": "osdisk",
            "vhd": {
              "uri": "[concat('http://',parameters('newStorageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',variables('VM04Name'),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('VM04Name'), '_NIC'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('FWName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "myFirewall"
      },
      "plan": {
        "name": "fortinet_fg-vm",
        "publisher": "fortinet",
        "product": "fortinet_fortigate-vm_v5"
      },
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', parameters('newStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/',variables('FWName'),'_NIC')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('FWName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "fortinet",
            "offer": "fortinet_fortigate-vm_v5",
            "sku": "fortinet_fg-vm",
            "version": "latest"
          },
          "osDisk": {
            "name": "osdisk",
            "vhd": {
              "uri": "[concat('http://',parameters('newStorageAccountName'),'.blob.core.windows.net/',variables('vmStorageAccountContainerName'),'/',variables('FWName'),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('FWName'),'_NIC'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('FERouteTableName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "FrontEnd Route Table"
      },
      "properties": {
        "routes": [
          {
            "name": "AllTrafficToFW",
            "properties": {
              "addressPrefix": "0.0.0.0/0",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "10.0.0.4"
            }
          },
          {
            "name": "InternalTrafficToFW",
            "properties": {
              "addressPrefix": "[variables('Subnet2Prefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "10.0.0.4"
            }
          },
          {
            "name": "AllowIntraSubnetTraffic",
            "properties": {
              "addressPrefix": "[variables('Subnet1Prefix')]",
              "nextHopType": "VnetLocal"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/routeTables",
      "name": "[variables('BERouteTableName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "BackEnd Route Table"
      },
      "properties": {
        "routes": [
          {
            "name": "AllTrafficToFW",
            "properties": {
              "addressPrefix": "0.0.0.0/0",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "10.0.0.4"
            }
          },
          {
            "name": "InternalTrafficToFW",
            "properties": {
              "addressPrefix": "[variables('Subnet1Prefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "10.0.0.4"
            }
          },
          {
            "name": "AllowIntraSubnetTraffic",
            "properties": {
              "addressPrefix": "[variables('Subnet2Prefix')]",
              "nextHopType": "VnetLocal"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('NSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "myVNetNSG"
      },
      "properties": {
        "securityRules": [
          {
            "name": "enable_dns_rule",
            "properties": {
              "description": "Enable Internal DNS",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "10.0.2.4",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "enable_rdp_rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "enable_web_rule",
            "properties": {
              "description": "Enable Internet to [variables('FWName')]",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "10.0.1.4",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "enable_app_rule",
            "properties": {
              "description": "Enable [variables('VM01Name')] to [variables('VM02Name')]",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "10.0.1.5",
              "destinationAddressPrefix": "10.0.2.5",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "deny_internet_rule",
            "properties": {
              "description": "Isolate the [variables('VNetName')] VNet from the Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Deny",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "deny_frontend_rule",
            "properties": {
              "description": "Isolate the [variables('Subnet1Name')] subnet from the [variables('Subnet2Name')] subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "[variables('Subnet1Prefix')]",
              "destinationAddressPrefix": "[variables('Subnet2Prefix')]",
              "access": "Deny",
              "priority": 150,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
